fixed the issue with cart link and user account link not aligning properly

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,7 +14,7 @@ html {
     color: black !important;
 }
 
-.list-inline-item {
+.list-inline {
     display: inline-flex;
 }
 /*------------------------------------- Media Queries */
